Section0202 - inspectingthe angular object

--- a/02_02/start/angular-module.html
+++ b/02_02/start/angular-module.html
@@ -1,1 +1,1 @@
-﻿<!doctype html><html lang="en"><head>  <meta charset="utf-8">  <title>Angular Module</title>  <script src="angular.js"></script>  <script>        </script></head><body>	</body></html>
+﻿<!doctype html><html lang="en"><head>  <meta charset="utf-8">  <title>Angular Module</title>  <script src="angular.js"></script>  <script>      var myApp = angular.module("myApp", []);      console.log(myApp);  </script></head><body></body></html>
