--- a/Section03/03_06/start/ng_include_directive.html
+++ b/Section03/03_06/start/ng_include_directive.html
@@ -1,28 +1,1 @@
-﻿<!doctype html><html lang="en" ng-app="myApp"><head>  <meta charset="utf-8">  <title>Template Directives</title>  <script src="angular.js"></script>  <style>      .odd {
-          background-color: tan;
-      }      .even {
-          background-color: gray;
-      }  </style>  <script>		(function() {		var name = "myApp",			requires = [],			myApp = null;				myApp = angular.module(name, requires);				myApp.controller("AppCtrl", function($scope) {		    $scope.contacts = [                { firstname: "John", lastname: "Smith", favourite: true },                { firstname: "Jimmy", lastname: "Jacob", favourite: false },                { firstname: "Charles", lastname: "Bailey", favourite: false },                { firstname: "Jacob", lastname: "Bateman", favourite: true },                { firstname: "Andrew", lastname: "Baxter", favourite: false }		    ];		});	}());	  </script></head><body ng-controller="AppCtrl">    <table>
-        <thead>
-            <tr>
-                <th>#</th>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Favourite</th>
-                <th>$first</th>
-                <th>$last</th>
-                <th>$middle</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr ng-repeat="contact in contacts" ng-class="$odd ? 'odd' : 'even'">
-                <td>{{$index+1}}</td>
-                <td>{{contact.firstname}}</td>
-                <td>{{contact.lastname}}</td>
-                <td>{{contact.favourite}}</td>
-                <td>{{$first}}</td>
-                <td>{{$last}}</td>
-                <td>{{$middle}}</td>
-            </tr>
-        </tbody>
-    </table></body></html>
+﻿<!doctype html><html lang="en" ng-app="myApp"><head>  <meta charset="utf-8">  <title>Template Directives</title>  <script src="angular.js"></script>  <style>      .odd {          background-color: tan;      }      .even {          background-color: gray;      }  </style>  <script>		(function() {		var name = "myApp",			requires = [],			myApp = null;				myApp = angular.module(name, requires);				myApp.controller("AppCtrl", function($scope) {		    $scope.contacts = [                { firstname: "John", lastname: "Smith", favourite: true },                { firstname: "Jimmy", lastname: "Jacob", favourite: false },                { firstname: "Charles", lastname: "Bailey", favourite: false },                { firstname: "Jacob", lastname: "Bateman", favourite: true },                { firstname: "Andrew", lastname: "Baxter", favourite: false }		    ];        $scope.url = "contact_table.html";        $scope.viewFile = function(){          if($scope.viewState){            return "contact_list.html";          }else{            return "contact_table.html";          }        }        $scope.onPartialLoad = function(){          console.log($scope.viewFile() + "loaded!");        }		});	}());	  </script></head><body ng-controller="AppCtrl">    <input type="checkbox" ng-model="viewState">Toggle List View    <ng-include src="viewFile()" onload="onPartialLoad()"></ng-include></body></html>
