--- a/Section03/03_11/start/style_directives.html
+++ b/Section03/03_11/start/style_directives.html
@@ -1,8 +1,1 @@
-﻿<!doctype html><html lang="en" ng-app="myApp"><head>  <meta charset="utf-8">  <title>Style Directives</title>  <script src="angular.js"></script>  <script>      
-        (function () {
-              var name = "myApp",requires = [],myApp = null;
-              myApp = angular.module(name, requires);
-              myApp.controller("AppCtrl", function ($scope) {
-                  
-              });
-        }());	  </script></head><body ng-controller="AppCtrl">    <button>Set Color</button>	<button>Bold</button>	<button>Italic</button>	<p>This text will be styled using ng-style directive</p></body></html>
+﻿<!doctype html><html lang="en" ng-app="myApp"><head>  <meta charset="utf-8">  <title>Style Directives</title>  <script src="angular.js"></script>  <script>              (function () {              var name = "myApp",requires = [],myApp = null;              myApp = angular.module(name, requires);              myApp.controller("AppCtrl", function ($scope) {                                });        }());	  </script></head><body ng-controller="AppCtrl">  <button ng-click="styles={'color':'red'}">Set Color</button>	<button ng-click="styles={'font-weight': 'bold'}">Bold</button>	<button ng-click="styles={'font-style': 'italic'}">Italic</button>	<p ng-style="styles">This text will be styled using ng-style directive</p></body></html>
