--- a/Section07/07_09/start/oob_directives.html
+++ b/Section07/07_09/start/oob_directives.html
@@ -1,4 +1,10 @@
-﻿<!doctype html><html lang="en" ng-app="myApp"><head>  <meta charset="utf-8">  <title>Custom Directives</title>  <script src="angular.js"></script>  <script>      (function () {
+﻿<!doctype html>
+<html lang="en" ng-app="myApp">
+<head>
+  <meta charset="utf-8">
+  <title>Custom Directives</title>
+  <script src="angular.js"></script>
+  <script>      (function () {
           var name = "myApp",requires = [],myApp = null;
           myApp = angular.module(name, requires);
           myApp.controller("AppCtrl", function ($scope) {
@@ -20,7 +26,8 @@
                   restrict: "AEC",
                   replace: true,
                   scope: {
-                      employee: "=employeeInfo"
+                      employee: "=employeeInfo",
+                      message: "@"
                   },
                   controller: function ($scope) {
                       $scope.title = "Employee Card";
@@ -30,4 +37,12 @@
                   }
               }
           });
-      }());	  </script></head><body ng-controller="AppCtrl">    <employee-card employee-info="employee"></employee-card>    <employee-card employee-info="employee1"></employee-card></body></html>
+      }());
+
+  </script>
+</head>
+<body ng-controller="AppCtrl">
+    <employee-card employee-info="employee" message="Employee of the Year -2015"></employee-card>
+    <employee-card employee-info="employee1"></employee-card>
+</body>
+</html>
